# VideoPreview

./: README.md  pyproject.toml  requirements.txt
config/: config.ini  default.yaml
docs/: zh-CN.md
src/video-preview/: main.py  videoPreview.kv  video_preview.py
src/video-preview/core/: model.py  player.py  preview_image.py  thumbnail.py
src/video-preview/gui/base/: progress_viewer.py
src/video-preview/gui/file/: file_browser.py  file_list.py
src/video-preview/gui/image/: image_viewer.py
src/video-preview/utils/: file_util.py  sequence_generator.py  time_duration_util.py  time_util.py  video_file_util.py  video_meta_util.py
tests/video-preview/: color-picker.py  kivy-md-test.py  kivy-test.py  tv-scroll.py
