[project]
name = "VideoPreview"
version = "0.1.0"
description = "A video preview tool."
authors = [{ name = "yeehua", email = "yeehua@live.cn" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Kivy>=2.3.1",       # GUI框架
    "python-vlc>=3.0.0",    # 视频播放（跨平台支持）
    "Pillow>=11.3.0",       # 缩略图生成
    "numpy>=1.21",          # 图像处理（配合OpenCV可选）
    "image==1.5.33",
    "kivymd==1.2.0",
    "dynaconf>=3.2.11",
    "opencv-python>=4.12.0",
    "ffpyplayer>=4.5.3"
]

[project.urls]
Homepage = "https://github.com/yeehua-cn/VideoPreview"
Repository = "https://github.com/yeehua-cn/VideoPreview"

