[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[project]
name = "VideoPreview"
version = "0.1.0"
description = "A video preview tool."
authors = [{ name = "yeehua", email = "yeehua@live.cn" }]
maintainers = [
  {name = "yeehua", email = "yeehua@live.cn"}
]
readme = "README.md"
keywords = ["video", "preview","video player" , "snapshot"]
requires-python = "<3.15,>=3.11"
dependencies = [
    "Kivy>=2.3.1",       # GUI框架
    "python-vlc>=3.0.0",    # 视频播放（跨平台支持）
    "Pillow>=11.3.0",       # 缩略图生成
    "numpy>=1.21",          # 图像处理（配合OpenCV可选）
    "image==1.5.33",
    "kivymd==1.2.0",
    "dynaconf>=3.2.11",
    "opencv-python>=4.12.0",
    "ffpyplayer>=4.5.3",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/yeehua-cn/VideoPreview"
Repository = "https://github.com/yeehua-cn/VideoPreview"

[dependency-groups]
build-packages = [
    "pyinstaller>=6.16.0",
]

[[tool.pdm.source]]  # Use a custom index
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
name = "pypi"

